--- a/scavenger/client/styles/main.css
+++ b/scavenger/client/styles/main.css
@@ -233,22 +233,25 @@ body {
   font-size: 36px;
   color: #eee; }
 
-.answerContainer textarea {
-  width: 100%;
-  height: 200px;
-  border: 1px black solid; }
-.answerContainer textarea::-webkit-input-placeholder {
-  font-size: 36px; }
-.answerContainer textarea::-webkit-input-placeholder {
-  font-size: 36px; }
-.answerContainer textarea:-moz-placeholder {
-  /* Firefox 18- */
-  font-size: 36px; }
-.answerContainer textarea::-moz-placeholder {
-  /* Firefox 19+ */
-  font-size: 36px; }
-.answerContainer textarea:-ms-input-placeholder {
-  font-size: 36px; }
+.answerContainer {
+  padding: 20px; }
+  .answerContainer textarea {
+    width: 100%;
+    height: 200px;
+    border: 1px black solid;
+    font-size: 24px; }
+  .answerContainer textarea::-webkit-input-placeholder {
+    font-size: 24px; }
+  .answerContainer textarea::-webkit-input-placeholder {
+    font-size: 24px; }
+  .answerContainer textarea:-moz-placeholder {
+    /* Firefox 18- */
+    font-size: 24px; }
+  .answerContainer textarea::-moz-placeholder {
+    /* Firefox 19+ */
+    font-size: 24px; }
+  .answerContainer textarea:-ms-input-placeholder {
+    font-size: 24px; }
 
 .itemCheckFrm {
   display: inline-block;
@@ -271,10 +274,30 @@ body {
   background: #eff0c7; }
 
 .picBox {
+  position: relative;
   display: inline-block;
-  width: 49%;
-  height: 300px;
-  background: #eff0c7; }
+  width: 350px;
+  height: 350px;
+  border: 10px dashed #fff;
+  border-radius: 10px;
+  background: rgba(255, 255, 255, 0); }
+
+.uploadWords {
+  position: absolute;
+  top: 50px;
+  left: 60px;
+  color: #797979; }
+
+.imgUpload {
+  color: white; }
+
+.fileLoader {
+  opacity: 0;
+  width: 349px;
+  height: 349px;
+  background: rgba(255, 255, 255, 0);
+  color: rgba(255, 255, 255, 0);
+  border: red 1px solid; }
 
 .anwserDebug {
   background: #e43cff; }
