--- a/scavenger/client/templates/imageUploader.html
+++ b/scavenger/client/templates/imageUploader.html
@@ -1,10 +1,9 @@
 <template name="uploader">
 
-<span class="picBox">
+<!-- <span class="picBox"> -->
   <form id="imgUpload">
     <input id='uploadInput' class="fileLoader" name="file" type="file">
-      <br><br><br>
     <label for="file" class="uploadWords">Tap here to upload/take a picture</label>
   </form>
-</span>
+<!-- </span> -->
 </template>
