--- a/scavenger/client/templates/sponsorsPg.html
+++ b/scavenger/client/templates/sponsorsPg.html
@@ -8,5 +8,99 @@
     <div class="dashTitle">Sponsors</div>
   </div>
   <br><br>
-  here are all the sponsors!
+  A hearfelt "Thank You" goes out to the following sponsors, Without whom the Cary Scavenger Hunt would not be possible:
+  <br><br><br>
+  <div class="sponsorLine">
+    <span class="sponsorTitle">Host</span>
+  </div>
+  <br><br>
+  The Town of Cary
+  <br><br><br>
+  <div class="sponsorLine">
+    <span class="sponsorTitle">Presenting</span>
+  </div>
+  <br><br>
+  Cary Citizen
+  <br><br>
+  Doctor's Express
+  <br><br><br>
+  <div class="sponsorLine">
+    <span class="sponsorTitle">Technology</span>
+  </div>
+    <br><br>
+    Kramden Institute
+    <br><br>
+    The Forge Initiative (formerly Wake Robotics)
+    <br><br>
+    Triangle Family Dentistry
+    <br><br>
+    Carolina Orthodontics & Children's Dentistry
+    <br><br><br>
+  <div class="sponsorLine">
+    <span class="sponsorTitle">Platinum</span>
+  </div>
+    <br><br>
+    Great Harvest
+    <br><br>
+    Ashworth Drug
+    <br><br>
+    Chick Fil A
+    <br><br>
+    Cat Clinic
+    <br><br>
+    NC Amtrack
+    <br><br>
+    Koka Fit Club
+    <br><br>
+    Paws In The City
+    <br><br><br>
+    <div class="sponsorLine">
+      <span class="sponsorTitle">Gold</span>
+    </div>
+    <br><br>
+    Cary Family Eye Care
+    <br><br>
+    Whole Foods
+    <br><br>
+    Cary YMCA
+    <br><br>
+    Hurricane Grill & Wings
+    <br><br>
+    Firewurst
+    <br><br>
+    The Country Connection Western Store
+    <br><br>
+    The Butcher's Market
+    <br><br>
+    Workout Anytime
+    <br><br>
+    The Mayton Inn
+    <br><br>
+    Kite Realty- Parkside Town Commons
+    <br><br>
+    Stonehaven Jewelry
+    <br><br>
+    Triangle Table Tennis
+    <br><br><br>
+    <div class="sponsorLine">
+      <span class="sponsorTitle">Silver</span>
+    </div>
+    <br><br>
+    Heart of Cary
+    <br><br>
+    Glenaire
+    <br><br>
+    Dorcas
+    <br><br>
+    School of Rock
+    <br><br>
+    Dogtopia
+    <br><br>
+    Wake Academy
+    <br><br>
+    Triangle Food Tour
+    <br><br><br>
+
+
+
 </template>
