--- a/scavenger/client/styles/main.css
+++ b/scavenger/client/styles/main.css
@@ -336,4 +336,17 @@ body {
 .backToQsBtn:active {
   background: #311c33; }
 
+.sponsorLine {
+  border-bottom: 1px #5fb948 solid;
+  position: relative;
+  text-align: center; }
+
+.sponsorTitle {
+  padding: 5px;
+  top: 12px;
+  font-size: 24px;
+  background: #eee;
+  border-left: 1px #5fb948 solid;
+  border-right: 1px #5fb948 solid; }
+
 /*# sourceMappingURL=main.css.map */
