--- a/scavenger/client/templates/AboutPg.html
+++ b/scavenger/client/templates/AboutPg.html
@@ -9,4 +9,9 @@
   </div>
   <br><br>
   The Cary Citizen has been running the Cary Scavenger hunt for the last 4 years and every year it continues to grow and be even more awesome than the last year. This year there are over 70 teams competeing to find the answers to 70 questions!
+  <br><br><br>
+    <a href="https://www.iubenda.com/privacy-policy/7896919" target="_blank" class="iubenda-white no-brand iub-body-embed iubenda-embed" title="Privacy Policy">Privacy Policy</a>
+    <script type="text/javascript">
+      (function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src = "https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);
+    </script>
 </template>
