--- a/scavenger/client/templates/dashboard.html
+++ b/scavenger/client/templates/dashboard.html
@@ -15,7 +15,8 @@
           <ul>
             <li class="menuOpt aboutPg">about the hunt</li><br>
             <li class="menuOpt sponsorsPg">Sponsors</li><br>
-            <li class="logoutBtn">Logout</li><br>
+            <li class="logoutBtn">Logout</li><br><br>
+            <li class= "menuOpt closeBurger">Close Options</li>
           </ul>
         </div>
       </div>
