--- a/scavenger/client/templates/answerPage.html
+++ b/scavenger/client/templates/answerPage.html
@@ -20,7 +20,7 @@
       {{#if theQuestion.isPic}}
         <span class="picBox">
           {{#if theQuestion.picUrl}}
-            <img src="{{theQuestion.picUrl}}" width="300px" height="300px" class="userPic">
+            <img src="{{theQuestion.picUrl}}" width="90%" class="userPic">
           {{/if}}
           {{>uploader}}
         </span>
