--- a/scavenger/client/templates/loginPg.html
+++ b/scavenger/client/templates/loginPg.html
@@ -10,7 +10,7 @@
       </div>
        {{> loginSponsors}}
       <div class="needRegBtn">
-        Click here to sign up!<br>
+        Click here to sign up!
       </div>
       <br><br>
       <div class="off modalGrey">
