--- a/scavenger/client/templates/register.html
+++ b/scavenger/client/templates/register.html
@@ -4,15 +4,15 @@
   </div>
 
     <form class="regLogin" id="userRegFrm">
-        <input id="regEmail" type="email" name="registerEmail" placeholder="E-mail Address">
+        <input class="regInput" id="regEmail" type="email" name="registerEmail" placeholder="E-mail Address">
         <br><br>
-        <input id="regName" type="text" name="registerName" placeholder= "User Name">
+        <input class="regInput" id="regName" type="text" name="registerName" placeholder= "User Name">
         <br><br>
-        <input id="regPass" type="password" name="registerPassword" placeholder="Choose A Password">
+        <input class="regInput" id="regPass" type="password" name="registerPassword" placeholder="Choose A Password">
         <br><br>
-        <input id="regPassConf" type="password" name="confirmPassword" placeholder="Confirm Password">
+        <input class="regInput" id="regPassConf" type="password" name="confirmPassword" placeholder="Confirm Password">
         <br><br>
-        <input type="submit">
+        <input class="regInput" type="submit">
         <br><br>
         <div class="cancelReg">Cancel</div>
     </form>
