--- a/scavenger/client/styles/main.scss
+++ b/scavenger/client/styles/main.scss
@@ -24,19 +24,19 @@ body{
   .heroImg{
     width: 95%;
     margin: 2% 0 0 2.5%;
-    height: 200px;
+    height: 150px;
   }
 }
 .eachLogin{
   text-align: center;
   //border: blue 1px solid;
-  height: 70px;
+  height: 50px;
   font-size: 24px;
   input{
-    height:60px;
+    height:40px;
     width: 300px;
     font-size: 20px;
-    margin: 1% 0 0 0;
+    margin: 3% 0 0 0;
   }
 }
 .regModalText{
@@ -45,15 +45,15 @@ body{
 }
 .regLogin{
   text-align: center;
-  //border: blue 1px solid;
+  // border: blue 1px solid;
   height: 70px;
   font-size: 24px;
   margin: 50px 0 0 0;
-  input{
-    height:60px;
-    width: 300px;
+  .regInput{
+    height:40px;
+    width: 250px;
     font-size: 20px;
-    margin: 3% 0 3% 0;
+    margin: 0;
   }
 }
 .sponsorImgs{
@@ -73,7 +73,7 @@ body{
   width: 100%;
   text-align: center;
   font-size: 16px;
-  margin: 150px 0 0 0;
+  margin: 130px 0 -5px 0;
 }
 .login-sponsor-text{
   font-size: 14px;
@@ -84,11 +84,11 @@ body{
   height: 70px;
 }
 .TFD-logo{
-  width: 49%;
+  width: 45%;
   height: 60px;
 }
 .COD-logo{
-  width: 49%;
+  width: 45%;
   height: 60px;
 }
 .modalGrey{
