--- a/scavenger/client/templates/login.html
+++ b/scavenger/client/templates/login.html
@@ -1,7 +1,9 @@
 <template name="login">
-
+  <div class="resetPassBtn off">
+    Reset Password
+  </div>
     <form class="eachLogin" id="userLoginFrm">
-        <input type="email" name="loginEmail" placeholder="Email Address">
+        <input id="loginEmail" type="email" name="loginEmail" placeholder="Email Address">
         <input type="password" name="loginPassword" placeholder="Password">
         <input type="submit" value="Login">
     </form>
