--- a/scavenger/client/templates/answerPage.html
+++ b/scavenger/client/templates/answerPage.html
@@ -1,10 +1,10 @@
 <template name="answerPage">
     <div class="dashBanner">
       <div class="back">
-        Back to<br>dash<br>board
+        &#8678;
       </div>
       <br><br>
-      <div class="dashTitle">question {{theQuestion.questionNumber}}</div>
+      <div class="dashTitle">Question {{theQuestion.questionNumber}}</div>
       <div class="questionText off">{{theQuestion.questionText}}</div>
     </div>
     <div class="answerContainer">
