--- a/scavenger/client/styles/main.css
+++ b/scavenger/client/styles/main.css
@@ -29,7 +29,7 @@ body {
   border: solid thin #5a5a5a;
   width: 70%;
   margin: 0 0 0 15%;
-  padding: 1% 0; }
+  padding: 1%; }
 
 .eachLogin {
   text-align: center;
@@ -98,7 +98,7 @@ body {
   position: fixed;
   top: 0px;
   left: 0px;
-  z-index: 1; }
+  z-index: 155000; }
 
 .modalBox {
   background: #A1D7D9;
@@ -118,12 +118,12 @@ body {
 
 .hamburger {
   display: visible;
-  padding-top: 40px;
+  padding-top: 20px;
   box-sizing: border-box;
   float: left;
   background: #327d80;
   height: 100%;
-  width: 15%;
+  width: 25%;
   vertical-align: middle;
   text-align: center;
   font-size: 18px;
@@ -138,7 +138,7 @@ body {
   top: 0px;
   width: 50%;
   height: 100%;
-  z-index: 15; }
+  z-index: 200000000; }
 
 .menuOpt:active {
   background: #045e4b; }
@@ -156,7 +156,8 @@ body {
   width: 15%;
   vertical-align: middle;
   text-align: center;
-  font-size: 18px;
+  font-size: 45px;
+  font-weight: bold;
   z-index: 50; }
 
 .back:active {
@@ -180,78 +181,67 @@ body {
   background: #701111; }
 
 .dashBanner {
-  height: 100px;
+  height: 70px;
   width: 100%;
   vertical-align: middle;
   background: #A1D7D9;
   color: #35b0b5;
-  font-size: 24px; }
+  font-size: 24px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 20; }
 
 .dashLogin {
-  margin-top: -20px;
   font-size: 28px;
   color: #35b0b5;
   font-family: sans-serif;
-  float: left; }
+  text-align: center; }
 
 .dashTitle {
-  font-size: 64px;
+  font-size: 40px;
   color: #35b0b5;
   font-family: sans-serif;
   float: left;
-  margin-top: -35px; }
+  margin: -30px 0 0 5px;
+  text-align: center; }
 
 .heroImg {
   width: 100%; }
 
 .allQuestions {
-  display: inline-block;
-  width: 100%; }
+  display: block;
+  width: 100%;
+  margin: 40px 0 0 0;
+  z-index: -5; }
+
+.qBoxWrap {
+  width: 40%;
+  height: 100px;
+  margin: 2%;
+  background: #bfe4dc;
+  border: black 1px solid;
+  z-index: 0;
+  display: inline-block; }
+  .qBoxWrap .answered {
+    background: #5fb948; }
 
 .qBox {
   position: relative;
-  width: 80%;
-  height: 125px;
-  margin-left: 15%;
-  background: #bfe4dc;
-  border: black 1px solid; }
+  display: block;
+  padding-top: 5px;
+  box-sizing: border-box;
+  background: #A1D7D9;
+  height: 100px; }
+  .qBox .qNumberText {
+    font-size: 40px; }
+  .qBox .qAnswerStatus {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    padding: 1% 0; }
   .qBox .answered {
-    background: #5fb948; }
-
-.qBoxLeft {
-  float: left;
-  display: inline-block;
-  padding-top: 15px;
-  box-sizing: border-box;
-  top: 0px;
-  left: 0px;
-  background: #A1D7D9;
-  font-size: 48px;
-  height: 100%;
-  width: 20%; }
-  .qBoxLeft .answered {
-    color: #5fb948;
-    background: #5fb948; }
-
-.qBoxMiddle {
-  float: left;
-  display: inline-block;
-  box-sizing: border-box;
-  padding: 15px;
-  font-size: 18px;
-  width: 40%;
-  height: 100%;
-  padding-top: 20px;
-  background: #eee; }
-
-.anwserTheQ {
-  float: left;
-  font-size: 24px;
-  box-sizing: border-box;
-  background: #A1D7D9;
-  height: 100%;
-  width: 40%; }
-  .anwserTheQ .answered {
     color: #5fb948;
     background: #5fb948; }
 
