--- a/scavenger/client/styles/main.css
+++ b/scavenger/client/styles/main.css
@@ -1,7 +1,8 @@
 body {
   background: #eee;
   text-align: center;
-  font-family: sans-serif; }
+  font-family: sans-serif;
+  box-sizing: border-box; }
 
 .off {
   display: none; }
@@ -181,6 +182,7 @@ body {
   background: #701111; }
 
 .dashBanner {
+  position: fixed;
   height: 70px;
   width: 100%;
   vertical-align: middle;
@@ -188,15 +190,19 @@ body {
   color: #35b0b5;
   font-size: 24px;
   position: fixed;
-  top: 0;
+  top: -1;
   left: 0;
-  z-index: 20; }
+  z-index: 20;
+  -webkit-box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.14);
+  -moz-box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.14);
+  box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.14); }
 
 .dashLogin {
   font-size: 28px;
   color: #35b0b5;
   font-family: sans-serif;
-  text-align: center; }
+  text-align: center;
+  text-overflow: ellipsis; }
 
 .dashTitle {
   font-size: 40px;
@@ -204,7 +210,8 @@ body {
   font-family: sans-serif;
   float: left;
   margin: -30px 0 0 5px;
-  text-align: center; }
+  text-align: center;
+  text-overflow: ellipsis; }
 
 .heroImg {
   width: 100%; }
@@ -254,12 +261,15 @@ body {
   color: #eee; }
 
 .answerContainer {
-  padding: 20px; }
+  padding: 20px;
+  margin: 40px 0 0 0;
+  position: relative; }
   .answerContainer textarea {
     width: 100%;
     height: 200px;
     border: 1px black solid;
-    font-size: 24px; }
+    font-size: 24px;
+    margin: 20px 0 0 0; }
   .answerContainer textarea::-webkit-input-placeholder {
     font-size: 24px; }
   .answerContainer textarea::-webkit-input-placeholder {
@@ -301,15 +311,19 @@ body {
   border: 10px dashed #fff;
   border-radius: 10px;
   background: rgba(255, 255, 255, 0); }
+  .picBox img {
+    z-index: 20; }
 
 .userPic {
-  z-index: 0; }
+  z-index: 20; }
 
 .uploadWords {
   position: absolute;
-  top: 320px;
-  left: 60px;
-  color: #797979; }
+  top: 1%;
+  left: 0;
+  width: 100%;
+  color: #797979;
+  z-index: 0; }
 
 .imgUpload {
   color: white; }
@@ -335,11 +349,12 @@ body {
 
 .submitAnswerBtn {
   text-align: center;
-  width: 80%;
-  height: 100px;
-  margin-left: 10%;
+  width: 90%;
+  margin: 5px 0 0 5%;
   background: #409646;
-  font-size: 48px; }
+  border: solid 4px #214f25;
+  font-size: 35px;
+  padding: 15px 0; }
 
 .submitAnswerBtn:active {
   background: #61fb6b; }
