work on question page styling

--- a/scavenger/client/templates/answerPage.html
+++ b/scavenger/client/templates/answerPage.html
@@ -1,12 +1,16 @@
 <template name="answerPage">
+
     <div class="dashBanner">
       <div class="back">
         &#8678;
       </div>
-      <br><br>
-      <div class="dashTitle">Question {{theQuestion.questionNumber}}</div>
-      <div class="questionText off">{{theQuestion.questionText}}</div>
+
+      <div class="dashTitle">
+        Question {{theQuestion.questionNumber}}
+      </div>
+
     </div>
+
     <div class="answerContainer">
 
     <!-- {{> shortGray}} -->
