--- a/scavenger/client/styles/main.css
+++ b/scavenger/client/styles/main.css
@@ -189,8 +189,7 @@ body {
   background: #A1D7D9;
   color: #35b0b5;
   font-size: 24px;
-  position: fixed;
-  top: -1;
+  top: 0;
   left: 0;
   z-index: 20;
   -webkit-box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.14);
@@ -209,7 +208,7 @@ body {
   color: #35b0b5;
   font-family: sans-serif;
   float: left;
-  margin: -30px 0 0 5px;
+  margin: 10px 0 0 5px;
   text-align: center;
   text-overflow: ellipsis; }
 
@@ -219,8 +218,10 @@ body {
 .allQuestions {
   display: block;
   width: 100%;
-  margin: 40px 0 0 0;
+  margin: 80px 0 0 0;
   z-index: -5; }
+  .allQuestions .questionLabel {
+    color: #d2d2d2; }
 
 .qBoxWrap {
   width: 40%;
@@ -263,7 +264,7 @@ body {
 .answerContainer {
   padding: 20px;
   margin: 40px 0 0 0;
-  position: relative; }
+  display: block; }
   .answerContainer textarea {
     width: 100%;
     height: 200px;
