--- a/scavenger/client/styles/main.scss
+++ b/scavenger/client/styles/main.scss
@@ -203,8 +203,7 @@ body{
   background: #A1D7D9;
   color:  #35b0b5;
   font-size:24px;
-  position: fixed;
-  top: -1;
+  top: 0;
   left: 0;
   z-index: 20;
   -webkit-box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.14);
@@ -223,7 +222,7 @@ body{
   color: #35b0b5;
   font-family: sans-serif;
   float: left;
-  margin: -30px 0 0 5px;
+  margin: 10px 0 0 5px;
   text-align: center;
   text-overflow: ellipsis;
 }
@@ -234,9 +233,12 @@ body{
   //margin-top: 200px;
   display: block;
   width: 100%;
-  margin: 40px 0 0 0;
+  margin: 80px 0 0 0;
   z-index: -5;
   // border: red 1px solid;
+  .questionLabel{
+    color: lighten(gray, 32%);
+  }
 }
 .qBoxWrap{
   width: 40%;
@@ -314,7 +316,7 @@ body{
   padding: 20px;
   // border: solid thin red;
   margin: 40px 0 0 0;
-  position: relative;
+  display: block;
   textarea{
     //margin-top: 200px;
     width: 100%;
