--- a/scavenger/client/templates/dashboard.html
+++ b/scavenger/client/templates/dashboard.html
@@ -28,11 +28,10 @@
 
     </div>
 
-    <div class="dash">
-      <br>
-      <span class="dashTitle">Questions</span>
-      <br>
+
+
       <div class="allQuestions">
+        <div class='questionLabel'>-questions-</div>
         {{#each questions}}
 
           {{>question}}
@@ -40,7 +39,7 @@
         {{/each}}
 
       </div>
-    </div>
+
 
 
 
