--- a/scavenger/client/templates/icons.html
+++ b/scavenger/client/templates/icons.html
@@ -176,3 +176,36 @@
   </g>
   </svg>
 </template>
+
+<template name="thumbsDownIcon">
+<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="42px"
+  	 height="42px" viewBox="0 0 24 24" enable-background="new 0 0 24 24" xml:space="preserve">
+  <g id="Frames-24px">
+  	<rect fill="none" width="42" height="42"/>
+  </g>
+  <g id="Outline">
+  	<path fill=red d="M21,2h-4c-0.552,0-1,0.448-1,1v0.522l-3.628-1.451C12.253,2.024,12.127,2,12,2H4
+  		C3.517,2,3.103,2.346,3.016,2.821l-2,11c-0.053,0.292,0.026,0.592,0.216,0.82C1.422,14.868,1.704,15,2,15h6v4c0,0.552,0.448,1,1,1
+  		h3c0.4,0,0.762-0.238,0.919-0.606L15.659,13H16c0,0.552,0.448,1,1,1h4c0.552,0,1-0.448,1-1V3C22,2.448,21.552,2,21,2z M15,11
+  		c-0.4,0-0.762,0.238-0.919,0.606L11.341,18H10v-4c0-0.552-0.448-1-1-1H3.198l1.636-9h6.973L16,5.677V11H15z M20,12h-2V4h2V12z"/>
+  </g>
+  </svg>
+
+</template>
+
+<template name="thumbsUpIcon">
+
+  <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="42px"
+  	 height="42px" viewBox="0 0 24 24" enable-background="new 0 0 24 24" xml:space="preserve">
+  <g id="Frames-24px">
+  	<rect fill="none" width="42" height="42"/>
+  </g>
+  <g id="Outline">
+  	<path fill=green d="M22.768,7.359C22.578,7.132,22.296,7,22,7h-6V3c0-0.552-0.448-1-1-1h-3c-0.4,0-0.762,0.238-0.919,0.606
+  		L8.341,9H8c0-0.552-0.448-1-1-1H3C2.448,8,2,8.448,2,9v10c0,0.552,0.448,1,1,1h4c0.552,0,1-0.448,1-1v-0.522l3.628,1.451
+  		C11.747,19.976,11.873,20,12,20h8c0.483,0,0.897-0.346,0.984-0.821l2-11C23.037,7.887,22.958,7.587,22.768,7.359z M6,18H4v-8h2V18z
+  		 M19.166,18h-6.973L8,16.323V11h1c0.4,0,0.762-0.238,0.919-0.606L12.659,4H14v4c0,0.552,0.448,1,1,1h5.802L19.166,18z"/>
+  </g>
+  </svg>
+
+</template>
