--- a/scavenger/client/templates/teamListContainer.html
+++ b/scavenger/client/templates/teamListContainer.html
@@ -4,7 +4,7 @@
     <div class="teamList1">
       <div class="listTitle">Corporate Teams</div>
       <ul>
-        {{#each teams 1}}
+        {{#each teams corporate}}
           <li class="teamLink">{{this}}</li>
         {{/each}}
       </ul>
@@ -13,7 +13,7 @@
     <div class="teamList2">
       <div class="listTitle">Family Teams</div>
       <ul>
-        {{#each teams 2}}
+        {{#each teams adult}}
           <li class="teamLink">{{this}}</li>
         {{/each}}
       </ul>
@@ -22,7 +22,7 @@
     <div class="teamList3">
       <div class="listTitle">Adult Teams</div>
       <ul>
-        {{#each teams 3}}
+        {{#each teams family}}
           <li class="teamLink">{{this}}</li>
         {{/each}}
       </ul>
