--- a/scavenger/client/templates/AboutPg.html
+++ b/scavenger/client/templates/AboutPg.html
@@ -1,13 +1,12 @@
 <template name="aboutPg">
   <div class="dashBanner">
     <div class="back">
-      Back to<br>
-      Dash<br>board
+      &#8678;
     </div>
-    <br><br><br>
-    <div class="dashLogin">About the Scavenger Hunt</div>
+    <br>
+    <div class="dashLogin">About the Hunt</div>
   </div>
-  <br><br>
+  <br><br>  <br><br><br>
   The Cary Citizen has been running the Cary Scavenger hunt for the last 4 years and every year it continues to grow and be even more awesome than the last year. This year there are over 70 teams competeing to find the answers to 70 questions!
   <br><br><br>
     <a href="https://www.iubenda.com/privacy-policy/7896919" target="_blank" class="iubenda-white no-brand iub-body-embed iubenda-embed" title="Privacy Policy">Privacy Policy</a>
