--- a/scavenger/client/templates/resetPassword.html
+++ b/scavenger/client/templates/resetPassword.html
@@ -1,15 +1,18 @@
 <template name="ResetPassword">
 
-    {{#if resetPassword}}
+
     <form action="/reset-password"  id="resetPasswordForm" method="post">
+      <div>Cary Scavenger Hunt</div>
+      <div class="reset-label"> Password Reset Form</div>
         <input id="resetPasswordPassword" name="password" placeholder="New Password" type="password" >
-        <input id="resetPasswordPasswordConfirm" name="password-confirm" placeholder="Confirm" type="password" >
+        <input id="resetPasswordPasswordConfirm" name="password-confirm" placeholder="Confirm Password" type="password" >
         <input class="btn-submit" type="submit" value="Reset">
     </form>
+
+    <input class='reset-go-home' type="submit" value="Back to Login">
     <!-- end #reset-password-form -->
-    {{else}}
-      <div>You Must have reached this page in error, there is no reset password token available</div>
-    {{/if}}
+
+      <!-- <div>You Must have reached this page in error, there is no reset password token available</div> -->
+
 
 </template>
-Raw
