try new uploader

--- a/scavenger/client/templates/answerPage.html
+++ b/scavenger/client/templates/answerPage.html
@@ -24,7 +24,7 @@
       {{#if theQuestion.isPic}}
         <span class="picBox">
           {{#if theQuestion.picUrl}}
-            <img src="{{theQuestion.picUrl}}" width="90%"  height="350px" class="userPic">
+            <img src="{{theQuestion.picUrl}}" width="90%"  height="350px" class="userPic"/>
           {{/if}}
           {{>uploader}}
         </span>
